--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.16.2",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -20,6 +21,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
