--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
+      "@libs/*": ["libs/*"],
+      "@components/*": ["components/*"],
       "@/*": ["./src/*"]
     }
   },
